--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>org.example</groupId>
     <artifactId>Automationexercise</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
         <!-- Selenium WebDriver  -->
         <dependency>
@@ -27,6 +26,7 @@
             <artifactId>commons-io</artifactId>
             <version>2.15.1</version> <!-- Phiên bản mới nhất tại thời điểm hiện tại -->
         </dependency>
+
         <!-- Extent Reports -->
         <dependency>
             <groupId>com.aventstack</groupId>
@@ -62,7 +62,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
