Scenario1Test finish commit

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,26 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
+        <!-- RestAssured for API Testing -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version> <!-- bản mới nhất tính đến 2025 -->
+        </dependency>
+
+        <!-- JSON Assertion (optional but useful for response validation) -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <junit.jupiter.version>5.13.2</junit.jupiter.version>
